# gemchat

./: Cargo.toml  README.md  justfile
docs/: AGENT_HANDOFF.md  AGENT_HANDOVER.md
docs/adr/: 001-multi-agent-architecture.md
src/: ai.rs  app_terminal.rs  cli.rs  main.rs
src/agents/: architect.rs  coder.rs  executor.rs  mod.rs  orchestrator.rs  planner.rs  qa.rs  researcher.rs  reviewer.rs  skill.rs
src/config/: mod.rs  types.rs
src/persistence/: mod.rs  store.rs
src/pipeline/: context.rs  mod.rs  step.rs
src/provider/: claude.rs  gemini.rs  mod.rs  openai.rs
src/tools/: command.rs  filesystem.rs  git.rs  mod.rs  search.rs  test_runner.rs
src/worktree/: merge.rs  mod.rs
