[package]
name = "gemchat"
version = "0.2.2"
edition = "2024"
description = "Multi-agent Gemini chat CLI built with ratatui"
license = "MIT"
repository = "https://github.com/thelazydo/gemchat"
homepage = "https://github.com/thelazydo/gemchat"
readme = "README.md"
exclude = [
  ".github",
  "assets"
]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.28.1"
dirs = "6"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ratatui = "0.28.1"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
tui-textarea = "0.6.0"
tui-term = "0.3.2"
vt100 = "0.15.2"
portable-pty = "0.9.0"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2.2"
libc = "0.2.185"

[dev-dependencies]
tempfile = "3.27.0"
